fixed webapp and add some functionalities
